<resources>
    <string name="app_name">VikNote</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="error_textview_stub">Неизвестная ошибка!</string>
    <string name="reload_button">Попробовать еще раз</string>
    <string name="undefined_error">Неизвестная ошибка!</string>
    <string name="empty_data">В базе данных нет запрошенной информации</string>
    <string name="your_note">Ваша заметка</string>
    <string name="head">Заголовок</string>
    <string name="add_new_note">Добавьте новую заметку</string>
    <string name="desc">Описание (не обязательно)</string>
    <string name="add_new_folder">Дабавьте новую папку</string>
    <string name="color_bookmark">Цвет закладки</string>
    <string name="note_icon">note icon</string>
    <string name="save_button">Сохранить</string>

    <string name="menu_button_save_note">Menu button save note</string>
    <string name="icon_bookmark">Icon bookmark</string>

    <string name="action_edit">Редактировать</string>
    <string name="action_delete">Удалить</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_toggle">Toggle Layout Manager</string>
    <string name="add_folder_button">Add folder button</string>
    <string name="add_folder">Add folder</string>
    <string name="add_note">Add note</string>
    <string name="menu_button">Menu button</string>
    <string name="add">Добавить</string>
    <string name="folder_icon">folder icon</string>
    <string name="texttitle">TextTitle</string>
    <string name="_0">0</string>
    <string name="icon_up">icon up</string>
    <string name="icon_home">Icon home</string>
    <string name="icon_up_level">Icon up level</string>
    <string name="tille_note">Tille note</string>
    <string name="date">Date</string>
    <string name="details_text">Details text</string>
    <string name="icon_date">icon date</string>
    <string name="icon_note">icon note</string>
    <string name="munu_button">Munu button</string>
    <string name="Actions">Действия</string>
    <string name="fab">fab</string>
    <string name="Edit">Редактировать</string>
    <string name="Add_folder">Добавить папку</string>
    <string name="add_note_button">Add note button</string>
    <string name="Add_note">Добавить заметку</string>
    <string name="Add">Добавить</string>
    <string name="close">Закрыть</string>
    <string name="delete">Удалить</string>

    <string name="edit_note">Отредактируйте заметку</string>
    <string name="edit_folder">Отредактируйте папку</string>
    <string name="attention">Внимание!</string>
</resources>