<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/success_details_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.details.DetailsFragment">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/details_title"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_icon_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon_home"
                android:src="@drawable/ic_baseline_home_24" />

            <ImageView
                android:id="@+id/iv_icon_up_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/icon_up_level"
                android:src="@drawable/ic_baseline_subdirectory_arrow_left_24" />

            <TextView
                android:id="@+id/path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/details_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tille_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="55dp" />

        <TextView
            android:id="@+id/details_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/date"
            app:layout_constraintEnd_toEndOf="@+id/details_title"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/details_title" />

        <TextView
            android:id="@+id/details_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/details_text"
            app:layout_constraintEnd_toEndOf="@+id/details_title"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/details_date" />

        <ImageView
            android:id="@+id/iv_icon_bookmark"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_baseline_bookmark_grey_24"
            app:layout_constraintEnd_toStartOf="@+id/details_title"
            app:layout_constraintTop_toTopOf="@+id/details_title"
            android:contentDescription="@string/icon_bookmark" />

        <ImageView
            android:id="@+id/iv_icon_date"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_baseline_access_time_24"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/details_date"
            android:contentDescription="@string/icon_date" />

        <ImageView
            android:id="@+id/iv_icon_note"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_baseline_notes_24"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/details_text"
            android:contentDescription="@string/icon_note" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/loading_details_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible">

        <include layout="@layout/loading_layout" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/error_details_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/error_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error_textview_stub"
            android:textSize="22sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reload_button" />
    </LinearLayout>

</FrameLayout>