<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fab_add_layout">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/add_folder_button"
        android:src="@drawable/ic_baseline_create_new_folder_24"
        android:visibility="gone"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/fab_note"
        app:layout_constraintEnd_toEndOf="@+id/fab_menu" />

    <TextView
        android:id="@+id/fab_label_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_folder"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/fab_folder"
        app:layout_constraintEnd_toStartOf="@+id/fab_folder"
        app:layout_constraintTop_toTopOf="@+id/fab_folder" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/add_note_button"
        android:src="@drawable/ic_baseline_note_add_24"
        android:visibility="gone"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/fab_menu"
        app:layout_constraintEnd_toEndOf="@+id/fab_menu" />

    <TextView
        android:id="@+id/fab_label_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_note"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/fab_note"
        app:layout_constraintEnd_toStartOf="@+id/fab_note"
        app:layout_constraintTop_toTopOf="@+id/fab_note" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/purple_200"
        android:contentDescription="@string/menu_button"
        android:text="@string/add"
        app:fabSize="normal"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24" />

</androidx.constraintlayout.widget.ConstraintLayout>