<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/folder_icon"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/folder_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_folder_open_24" />

    <ImageView
        android:id="@+id/priority_icon"
        android:layout_width="23dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/folder_icon"
        app:layout_constraintStart_toStartOf="@+id/folder_icon"
        app:layout_constraintTop_toTopOf="@+id/folder_icon"
        app:srcCompat="@drawable/ic_baseline_bookmark_grey_24" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/texttitle"
        app:layout_constraintBottom_toBottomOf="@+id/dragHandleImageView"
        app:layout_constraintEnd_toStartOf="@+id/count_notes"
        app:layout_constraintStart_toEndOf="@+id/folder_icon"
        app:layout_constraintTop_toTopOf="@+id/dragHandleImageView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/dragHandleImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:tint="@color/cardview_shadow_start_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_hamburger_menu_bottom_bar"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/count_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="@+id/dragHandleImageView"
        app:layout_constraintEnd_toStartOf="@+id/dragHandleImageView"
        app:layout_constraintTop_toTopOf="@+id/dragHandleImageView" />


</androidx.constraintlayout.widget.ConstraintLayout>