<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/success_notes_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/iv_icon_up_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_baseline_subdirectory_arrow_left_24"
                    android:contentDescription="@string/icon_up" />

                <TextView
                    android:id="@+id/path"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/notes_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            app:iconifiedByDefault="false"
            app:queryBackground="@null" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notes_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/loading_notes_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible">

        <include layout="@layout/loading_layout" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/error_notes_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/error_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error_textview_stub"
            android:textSize="22sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reload_button" />
    </LinearLayout>

</FrameLayout>